--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "file_organizer_cli"
+name = "ORDO_smart_file_organizer"
 version = "0.1.0"
 
 [tool.setuptools.packages.find]
