refactor: Reorganize project into a backend/frontend monorepo structure
Moves all Python source code, tests, and configuration into a 'backend' directory and creates a 'frontend' directory to prepare for the new web UI. This establishes a clean separation between the two parts of the application.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-.env
+# Python artifacts
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Test artifacts
+.pytest_cache/
+
+# Build artfacts
+*.egg-info/
+dist/
+build/
+
+# Virtual enviroment
+.env
+
+# Log and output files
 *.log
 output.txt
-.json
-*.egg-info/
+log_de_erro.txt
+
+# Editor/OS specific
+.DS_Store
+.vscode/
